vallek-github.user.css
/* ==UserStyle==
@name           Github Compact
@namespace      github.com/openstyles/stylus
@version        2.4.1
@description    Github Compact style + distinctive tabs
@author         Vallek
==/UserStyle== */
@-moz-document domain("github.com") {
  /* Padding Size */
  header > div[class*="prc-Stack-Stack"] {
    align-items: center !important;
  }
  header > div[class*="prc-Stack-Stack"] > div[data-testid] {
    padding: 0.5em !important;
    align-items: center;
  }
  .notification-shelf.is-stuck {
    padding: 0.5em !important;
  }
  /* Buttons Size */
  /* Header center buttons */
  button[aria-label="Search or jump to…"] {
    height: 26px;
  }
  /* Header right buttons */
  div[data-testid="top-nav-right"] button[class*="prc-Button-ButtonBase"],
  div[data-testid="top-nav-right"] a[class*="prc-Button-ButtonBase"] {
    padding: 0.3em !important;
    height: auto;
  }
  button[class*="prc-Button-ButtonBase"][class*="styles-module__appHeaderButton"][class*="prc-Button-IconButton-fyge7"] {
    padding: 0 !important;
  }
  div[data-testid="top-nav-right"] button[class*="GlobalUserNavDrawer-module__anchor"] {
    width: auto;
    border: none !important;
    padding: 0 !important;
  }
  button[class*="prc-Button-ButtonBase"] > img[class*="prc-Avatar-Avatar"] {
    width: 26px;
    height: 26px;
  }
  .octicon-mark-github {
    width: 1.8em !important;
    height: 1.8em !important;
  }
  .octicon.octicon-arrow-up-right {
    margin-bottom: 0 !important;
  }
  /* Center Tabs */
  nav[class*="prc-components-UnderlineWrapper"] {
    width: 100%;
    max-width: 1280px;
    min-height: initial;
    margin-left: auto;
    margin-right: auto;
    align-items: end;
    overflow: visible;
  }
  /* Tabs */
  li[class*="prc-UnderlineNav-UnderlineNavItem"] {
    box-sizing: border-box !important;
    min-height: 1rem !important;
    border-radius: 5px 5px 0 0;
    box-shadow: inset 0 0 0px 1px rgba(128, 128, 128, 0.37); 
  }
  li[class*="prc-UnderlineNav-UnderlineNavItem"].overflow-hidden {
    overflow: visible !important;
  }
  li[class*="prc-UnderlineNav-UnderlineNavItem"]:has(a[class*="prc-components-UnderlineItem"][aria-current]) {
    background-color: var(--bgColor-default, var(--color-canvas-default)) !important;
    background-image: var(--ghd-bg-img) !important;
    box-shadow: inset 0 1px 0px 1px rgba(128, 128, 128, 0.37);
  }
  a[class*="prc-components-UnderlineItem"] {
    margin-bottom: 0 !important;
    padding: 0.3em 0.5em !important;
  }
  a[class*="prc-components-UnderlineItem"][aria-current] {
    --underlineNav-borderColor-active: #ffffff;

    border-radius: 0 !important;
  }
  /* Remove vertical scroll on tab bar bug */
  a[class*="prc-components-UnderlineItem"]::after {
    display: none;
  }
  /* Active Tab color for dark theme */
  @media (prefers-color-scheme: dark) {
    .UnderlineNav-item.selected {
      --underlineNav-borderColor-active: #0d1117;
      background-color: var(--ghd-bg-color, #0d1117) !important;
      background-image: var(--ghd-bg-img) !important;
    }
    .UnderlineNav-item.selected::after {
      background-color: var(--underlineNav-borderColor-active, var(--ghd-bg-color, var(--color-canvas-default))) !important;
    }
  }
  /* Turns muted text color back to normal on commits, repo info, etc */
  .react-directory-commit-age,
  .react-directory-commit-age > relative-time,
  .Link--muted,
  .Link--secondary {
    --fgColor-muted: var(--fgColor-default) !important;
    --color-fg-muted: var(--fgColor-default) !important;
    color: var(--fgColor-default) !important;
  }
  .react-directory-commit-age > relative-time {
    opacity: 1 !important;
  }
}
@-moz-document url-prefix("https://github.com/notifications") {
  /* Text color fix for Github Dark on Notifications screen */
  .notifications-list-item:hover {
    background-color: var(--color-accent-subtle) !important;
  }
  .Button-label {
    color: var(--button-default-fgColor-rest) !important;
  }
}

